fixed alignment of book title

--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@
     /* background-color: white; */
 }
 
-.title {
+.heading .title {
     margin-left: 5vw;
 }
 
-.log-in {
+.heading .log-in {
     margin-right: 5vw;
 }
 
@@ -52,14 +52,13 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     height: 200px;
     font-size: 20px;
     text-align: center;
     border: 2px solid yellow;
     border-radius: 10%;
     gap: 10px;
-    margin: 20px;
 }
 
 /*top, right, bottom, left*/
